--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "A silly app that let's you add and consume burgers",
   "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -17,10 +23,5 @@
   "bugs": {
     "url": "https://github.com/mweston6288/burger/issues"
   },
-  "homepage": "https://github.com/mweston6288/burger#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mysql": "^2.18.1"
-  }
+  "homepage": "https://github.com/mweston6288/burger#readme"
 }
